--- a/style.css
+++ b/style.css
@@ -54,6 +54,60 @@ h1, h2, p, a {
   line-height: 31.2px;
 }
 
+.header .nav::after {
+  position: absolute;
+  top: 79px;
+  left: -1px;
+  display: block;
+  content: '';
+  width: 100%;
+  border: 1px solid #4d4d4d;
+}
+
+.header .rectangle-1 {
+  position: absolute;
+  top: 476px;
+  display: block;
+  content: '';
+  width: 795px;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  border: 1px solid #4d4d4d;
+}
+
+.header .rectangle-2 {
+  position: absolute;
+  top: 477px;
+  display: block;
+  content: '';
+  width: 100%;
+  border: 1px solid #4d4d4d;
+}
+
+.header .rectangle-3 {
+  position: absolute;
+  top: 476px;
+  left: 0;
+  display: block;
+  content: '';
+  width: 795px;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  border: 1px solid #4d4d4d;
+}
+
+.header .rectangle-4 {
+  position: absolute;
+  top: 476px;
+  right: 0;
+  display: block;
+  content: '';
+  width: 795px;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  border: 1px solid #4d4d4d;
+}
+
 .header .link {
   text-decoration: none;
   margin-right: 36px;
@@ -75,7 +129,9 @@ h1, h2, p, a {
 }
 
 .unknwn {
-  width: 60%;
+  width: 1180px;
+  height: 290px;
+  z-index: 9999;
   background-size: cover;
 }
 
@@ -110,6 +166,15 @@ h1, h2, p, a {
   margin: 0px 0px 80px;
 }
 
+.cases .row::before {
+  position: absolute;
+  left: -1px;
+  display: block;
+  content: '';
+  width: 100%;
+  border: 1px solid #4d4d4d;
+}
+
 .cases .row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -137,11 +202,32 @@ h1, h2, p, a {
   margin: 0px 0px 24px 0px;
 }
 
+.cases .maintext-project::after {
+  position: absolute;
+  left: -1px;
+  top: 2585px;
+  display: block;
+  content: '';
+  width: 100%;
+  border: 1px solid #4d4d4d;
+}
+
 .cases .subtext-project {
   font-family: "NeueMontreal-Light";
   max-width: 384px;
   font-size: 18px;
   line-height: 23.4px;
+  font-weight: 500;
+}
+
+.cases .subtext-project::after {
+  position: absolute;
+  left: -1px;
+  top: 2275px;
+  display: block;
+  content: '';
+  width: 100%;
+  border: 1px solid #4d4d4d;
 }
 
 .cases .cases-text-end {
@@ -159,6 +245,16 @@ h1, h2, p, a {
 .unknwn-team .team-logo {
   color: black;
   margin: 0px 0px 136px;
+}
+
+.unknwn-team .team-logo::after {
+  position: absolute;
+  left: -1px;
+  top: 3289px;
+  display: block;
+  content: '';
+  width: 100%;
+  border: 1px solid #dedede;
 }
 
 .unknwn-team .team-text {
@@ -182,6 +278,25 @@ h1, h2, p, a {
   border: 1px solid #dedede;
 }
 
+.unknwn-team .team-profile::before {
+  position: absolute;
+  left: -1px;
+  display: block;
+  content: '';
+  width: 100%;
+  border: 1px solid #dedede;
+}
+
+.unknwn-team .team-profile::after {
+  position: absolute;
+  top: 4044px;
+  left: -1px;
+  display: block;
+  content: '';
+  width: 100%;
+  border: 1px solid #dedede;
+}
+
 .unknwn-team .user-pic {
   width: 250px;
   height: 250px;
@@ -199,6 +314,7 @@ h1, h2, p, a {
   font-size: 18px;
   line-height: 23.4px;
   color: black;
+  font-weight: 400;
 }
 
 .unknwn-team .text-team-end {
@@ -269,7 +385,7 @@ h1, h2, p, a {
 .contact .input-text {
   font-family: "NeueMontreal-Light";
   color: rgba(255, 255, 255, 0.4);
-  padding: 10px 0px 0px 10px;
+  padding: 10px 0px 0px 20px;
   height: 240px;
   resize: none;
   margin: 0px 0px 40px;
@@ -298,9 +414,10 @@ h1, h2, p, a {
 }
 
 .contact .inf-subtext {
-  font-family: "NeueMontreal-Bold";
+  font-family: "NeueMontreal-light";
   font-size: 18px;
   line-height: 23.4px;
+  font-weight: 400;
 }
 
 /* FOOTER */
@@ -318,6 +435,13 @@ h1, h2, p, a {
   padding: 152px 0px 148px 0px;
 }
 
+.footer .an {
+  position: absolute;
+  width: 100%;
+  height: 36px;
+  background-size: cover;
+}
+
 .footer .nav-end {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -327,10 +451,17 @@ h1, h2, p, a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 20px 40px 24px 40px;
+}
+
+.footer .nav-end::before {
+  position: absolute;
+  left: -1px;
+  top: 6042px;
+  display: block;
+  content: '';
+  width: 100%;
+  border: 1px solid #4d4d4d;
 }
 
 .footer .logo-end {
@@ -343,9 +474,9 @@ h1, h2, p, a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .footer .link-end, .footer .f {
@@ -407,8 +538,7 @@ h1, h2, p, a {
 
 @font-face {
   font-family: "NeueMontreal-Light";
-  src: url(/fonts/NeueMontreal-Light.otf);
+  src: url(/fonts/NeueMontreal-Light.otf) foram("truetype");
   font-style: normal;
-  font-weight: lighter;
 }
 /*# sourceMappingURL=style.css.map */
