--- a/style.scss
+++ b/style.scss
@@ -420,11 +420,19 @@ h1,h2,p,a {margin:0;}
     .user-profile {
         min-width: 310px!important;
     }
+    .unknwn {
+        width: 600px;
+        background-size: cover;
+    }
 }
 @media (max-width: 860px) {
     .container {
         width: calc(100% - 40px);
         padding: 0 20px;
+    }
+    .unknwn {
+        width: 300px;
+        background-size: cover;
     }
     .row {
         margin: 0 0px 0px -50px!important;
