--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   font-family: "NeueMontreal-Bold";
   font-size: 24px;
   color: white;
+  overflow-x: hidden;
 }
 
 h1, h2, p, a {
@@ -52,16 +53,18 @@ h1, h2, p, a {
       align-content: center;
   padding: 24px 40px;
   line-height: 31.2px;
+  border-bottom: 1px solid #4d4d4d;
 }
 
-.header .nav::after {
+.header .intro::before {
   position: absolute;
-  top: 79px;
-  left: -1px;
-  display: block;
+  left: 200px;
   content: '';
-  width: 100%;
+  width: 795px;
+  display: inline-block;
   border: 1px solid #4d4d4d;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 .header .link {
@@ -81,14 +84,29 @@ h1, h2, p, a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 208px 0px 298px 0px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 795px;
 }
 
 .unknwn {
-  width: 1180px;
-  height: 290px;
-  z-index: 9999;
-  background-size: cover;
+  position: relative;
+  font-size: 319px;
+  line-height: 414.7px;
+  color: transparent;
+  -webkit-text-stroke: 2px #343434;
+}
+
+.unknwn::before {
+  position: absolute;
+  left: 284px;
+  top: 40px;
+  content: "no chance against us";
+  width: 100%;
+  height: 100%;
+  font-size: 64px;
+  color: white;
 }
 
 /* ABOUT-US */
@@ -122,16 +140,8 @@ h1, h2, p, a {
   margin: 0px 0px 80px;
 }
 
-.cases .row::before {
-  position: absolute;
-  left: -1px;
-  display: block;
-  content: '';
-  width: 100%;
-  border: 1px solid #4d4d4d;
-}
-
 .cases .row {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -148,10 +158,39 @@ h1, h2, p, a {
   margin: 0 -50px;
 }
 
+.cases .row::before {
+  display: inline-block;
+  content: '';
+  width: 148%;
+  margin-left: -48%;
+  margin-right: -48%;
+  border: 1px solid #4d4d4d;
+}
+
+.cases .row::after {
+  display: inline-block;
+  content: '';
+  width: 148%;
+  margin-left: -48%;
+  margin-right: -48%;
+  border: 1px solid #4d4d4d;
+}
+
 .cases .item {
   width: 50%;
-  border: 1px solid #4d4d4d;
   padding: 56px 116px 56px 50px;
+  border-left: 1px solid #4d4d4d;
+  border-right: 1px solid #4d4d4d;
+}
+
+.cases .item::after {
+  position: absolute;
+  top: 310px;
+  display: inline-block;
+  content: '';
+  width: 100%;
+  margin-left: -30%;
+  border: 1px solid #4d4d4d;
 }
 
 .cases .maintext-project {
@@ -201,15 +240,25 @@ h1, h2, p, a {
 .unknwn-team .user-profile {
   width: 25%;
   padding: 30px 30px;
-  border: 1px solid #dedede;
+  border-left: 1px solid #dedede;
+  border-right: 1px solid #dedede;
 }
 
 .unknwn-team .team-profile::before {
-  position: absolute;
-  left: -1px;
   display: block;
   content: '';
-  width: 100%;
+  width: 175%;
+  margin-left: -330px;
+  margin-right: -330px;
+  border: 1px solid #dedede;
+}
+
+.unknwn-team .team-profile::after {
+  display: inline-block;
+  content: '';
+  width: 175%;
+  margin-left: -330px;
+  margin-right: -330px;
   border: 1px solid #dedede;
 }
 
@@ -342,6 +391,7 @@ h1, h2, p, a {
 }
 
 .footer .end {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -349,6 +399,65 @@ h1, h2, p, a {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 152px 0px 148px 0px;
+}
+
+.footer .unknwn-end {
+  font-size: 319px;
+  line-height: 414.7px;
+  color: transparent;
+  -webkit-text-stroke: 1px #343434;
+}
+
+.footer .stroke {
+  position: absolute;
+  top: 380px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 150%;
+  -webkit-animation: 80s stroke infinite linear;
+          animation: 80s stroke infinite linear;
+  -webkit-animation-delay: -10s;
+          animation-delay: -10s;
+}
+
+.footer .mark {
+  font-size: 26px;
+  color: rgba(255, 255, 255, 0.2);
+  margin-right: 30px;
+  cursor: pointer;
+  -webkit-transition: color .2s linear;
+  transition: color .2s linear;
+}
+
+.footer .mark:hover {
+  color: blue;
+}
+
+.footer .mark:nth-child(even):hover {
+  color: white;
+}
+
+@-webkit-keyframes stroke {
+  0% {
+    -webkit-transform: translate(100%, 0);
+            transform: translate(100%, 0);
+  }
+  100% {
+    -webkit-transform: translate(-100%, 0);
+            transform: translate(-100%, 0);
+  }
+}
+
+@keyframes stroke {
+  0% {
+    -webkit-transform: translate(100%, 0);
+            transform: translate(100%, 0);
+  }
+  100% {
+    -webkit-transform: translate(-100%, 0);
+            transform: translate(-100%, 0);
+  }
 }
 
 .footer .nav-end {
@@ -361,6 +470,7 @@ h1, h2, p, a {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 20px 40px 24px 40px;
+  border-top: 1px solid #4d4d4d;
 }
 
 .footer .logo-end {
