--- a/style.scss
+++ b/style.scss
@@ -342,7 +342,7 @@ h1,h2,p,a {margin:0;}
     }
     .stroke {
         position: absolute;
-        top: 380px;
+        top: 50%;
         display: flex;
         width: 150%;
         animation: 80s stroke infinite linear;
