--- a/style.scss
+++ b/style.scss
@@ -37,11 +37,23 @@ h1,h2,p,a {margin:0;}
     width: 1180px;
     margin: 0 auto;
 }
+.top-container {
+    width: 100%;
+    border-top: 1px solid rgba(222, 222, 222, 1);
+    border-bottom: 1px solid rgba(222, 222, 222, 1);
+}
+.w-container {
+    width: 100%;
+    border-top: 1px solid #4d4d4d;
+    border-bottom: 1px solid #4D4D4D;
+    &:nth-child(3) {
+        border-top: none;
+    }
+}
 
 /* HEADER */
 .header {
     background-color: $background-color;
-    
     .nav {
         display: flex;
         flex-wrap: wrap;
@@ -61,28 +73,53 @@ h1,h2,p,a {margin:0;}
         margin-right: 0;
     }
     .intro {
+        position: relative;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         height: 795px;
-        
     }
 }
+.block-1 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 50%;
+    border-bottom: 1px solid rgba(77, 77, 77, 1);
+}
+.line-1-2 {
+    width: 719px;
+    border-left: 1px solid rgba(77, 77, 77, 1);
+    border-right: 1px solid rgba(77, 77, 77, 1);
+}
+.line-2-1 {
+    width: 50%;
+    height: 100%;
+    border-right: 1px solid rgba(77, 77, 77, 1);
+}
+.block-2 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 50%;
+}
 .unknwn {
-    position: relative;
-    font-size: 319px;
+    position: absolute;
+    top: 19%;
+    font-size: 16.5vw;
     line-height: 414.7px;
     color: transparent;
     -webkit-text-stroke: 2px rgba(52, 52, 52, 1); 
 }
-.unknwn::before {
+.unk {
+    color: transparent;
+    -webkit-text-stroke: 1px rgba(255, 255, 255, 0.7); 
+}
+.n-chance {
     position: absolute;
-    left: 284px;
-    top: 40px;
-    content: "no chance against us";
-    width: 100%;
-    height: 100%;
-    font-size: 64px;
+    top: 44.3%;
+    font-size: 3.3vw;
     color: rgba(255, 255, 255, 1);
 }
 
@@ -108,6 +145,7 @@ h1,h2,p,a {margin:0;}
 
 .cases {
     display: flex;
+    flex-direction: column;
     background-color: $background-color;
     padding: 72px 0px 174px 0px;
 
@@ -121,42 +159,17 @@ h1,h2,p,a {margin:0;}
         flex-direction: row;
         justify-content: center;
         flex-wrap: wrap;
-        padding-bottom: 96px;
         margin: 0 -50px;
     }
-    .row::before {
-        display: inline-block;
-        content: '';
-        width: 148%;
-        margin-left: -48%;
-        margin-right: -48%;
-        border: 1px solid rgba(77, 77, 77, 1);
-    }
-    .row::after {
-        display: inline-block;
-        content: '';
-        width: 148%;
-        margin-left: -48%;
-        margin-right: -48%;
-        border: 1px solid rgba(77, 77, 77, 1);
-    }
-    
     .item {
         width: 50%;
         padding: 56px 116px 56px 50px;
         border-left: 1px solid rgba(77, 77, 77, 1);
         border-right: 1px solid rgba(77, 77, 77, 1);
+        &:nth-child(2) {
+            border-left: none;
+        }
     }
-    .item::after {
-        position: absolute;
-        top: 310px;
-        display: inline-block;
-        content: '';
-        width: 100%;
-        margin-left: -30%;
-        border: 1px solid rgba(77, 77, 77, 1);
-    }
-    
     .maintext-project {
         @extend %h2-sub;
         margin: 0px 0px 24px 0px;
@@ -169,6 +182,7 @@ h1,h2,p,a {margin:0;}
         font-weight: 500;
     }
     .cases-text-end {
+        margin-top: 96px;
         @extend %h2-sub;
         text-transform: uppercase;
     }
@@ -176,8 +190,10 @@ h1,h2,p,a {margin:0;}
 
 /* UNKNWN-TEAM */
 
+
 .unknwn-team {
     display: flex;
+    flex-direction: column;
     padding: 70px 0px 96px 0px;
 
 
@@ -194,7 +210,6 @@ h1,h2,p,a {margin:0;}
     .team-profile {
         display: flex;
         flex-wrap: wrap;
-        padding-bottom: 64px;
         margin: 0 -30px;
     }
     .user-profile {
@@ -202,22 +217,13 @@ h1,h2,p,a {margin:0;}
         padding: 30px 30px;
         border-left: 1px solid rgba(222, 222, 222, 1);
         border-right: 1px solid rgba(222, 222, 222, 1);
-    }
-    .team-profile::before {
-        display: block;
-        content: '';
-        width: 175%;
-        margin-left: -330px;
-        margin-right: -330px;
-        border: 1px solid rgba(222, 222, 222, 1);
-    }
-    .team-profile::after {
-        display: inline-block;
-        content: '';
-        width: 175%;
-        margin-left: -330px;
-        margin-right: -330px;
-        border: 1px solid rgba(222, 222, 222, 1);
+        &:nth-child(2) {
+            border-right: none;
+            border-left: none;
+        }
+        &:nth-child(4) {
+            border-left: none;
+        }
     }
     .user-pic {
         width: 250px; 
@@ -237,6 +243,7 @@ h1,h2,p,a {margin:0;}
         font-weight: 400;
     }
     .text-team-end {
+        margin-top: 64px;
         font-size: $primary-font;
         line-height: 31.2px;
         color: $secondary-color;
@@ -332,7 +339,7 @@ h1,h2,p,a {margin:0;}
         position: relative;
         display: flex;
         justify-content: center;
-        padding: 152px 0px 148px 0px;
+        padding: 148px 0px 148px 0px;
     }
     .unknwn-end {
         font-size: 319px;
