--- a/style.scss
+++ b/style.scss
@@ -76,7 +76,6 @@ h1,h2,p,a {margin:0;}
         position: relative;
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
         height: 795px;
     }
@@ -107,7 +106,7 @@ h1,h2,p,a {margin:0;}
 .unknwn {
     position: absolute;
     top: 19%;
-    font-size: 16.5vw;
+    font-size: 319px;
     line-height: 414.7px;
     color: transparent;
     -webkit-text-stroke: 2px rgba(52, 52, 52, 1); 
@@ -118,8 +117,8 @@ h1,h2,p,a {margin:0;}
 }
 .n-chance {
     position: absolute;
-    top: 44.3%;
-    font-size: 3.3vw;
+    top: 44%;
+    font-size: 64px;
     color: rgba(255, 255, 255, 1);
 }
 
