--- a/style.css
+++ b/style.css
@@ -91,9 +91,6 @@ h1, h2, p, a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -138,7 +135,7 @@ h1, h2, p, a {
 .unknwn {
   position: absolute;
   top: 19%;
-  font-size: 16.5vw;
+  font-size: 319px;
   line-height: 414.7px;
   color: transparent;
   -webkit-text-stroke: 2px #343434;
@@ -151,8 +148,8 @@ h1, h2, p, a {
 
 .n-chance {
   position: absolute;
-  top: 44.3%;
-  font-size: 3.3vw;
+  top: 44%;
+  font-size: 64px;
   color: white;
 }
 
