--- a/style.css
+++ b/style.css
@@ -82,19 +82,35 @@ h1, h2, p, a {
   margin-right: 0;
 }
 
-.header .intro {
-  position: relative;
+.intro {
+  height: 91.5vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 795px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #131313;
+}
+
+.unknwn {
+  position: absolute;
+  font-size: 16.6vw;
+  color: transparent;
+  -webkit-text-stroke: 2px #343434;
+}
+
+.n-chance {
+  position: absolute;
+  font-size: 3.3vw;
+  color: white;
 }
 
 .block-1 {
@@ -104,13 +120,15 @@ h1, h2, p, a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
   width: 100%;
   height: 50%;
   border-bottom: 1px solid #4d4d4d;
 }
 
 .line-1-2 {
-  width: 719px;
+  width: 38%;
   border-left: 1px solid #4d4d4d;
   border-right: 1px solid #4d4d4d;
 }
@@ -128,29 +146,15 @@ h1, h2, p, a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
   width: 100%;
   height: 50%;
-}
-
-.unknwn {
-  position: absolute;
-  top: 19%;
-  font-size: 319px;
-  line-height: 414.7px;
-  color: transparent;
-  -webkit-text-stroke: 2px #343434;
 }
 
 .unk {
   color: transparent;
   -webkit-text-stroke: 1px rgba(255, 255, 255, 0.7);
-}
-
-.n-chance {
-  position: absolute;
-  top: 44%;
-  font-size: 64px;
-  color: white;
 }
 
 /* ABOUT-US */
@@ -410,10 +414,12 @@ h1, h2, p, a {
 }
 
 .footer .end {
-  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -421,7 +427,7 @@ h1, h2, p, a {
 }
 
 .footer .unknwn-end {
-  font-size: 319px;
+  font-size: 16.6vw;
   line-height: 414.7px;
   color: transparent;
   -webkit-text-stroke: 1px #343434;
@@ -429,7 +435,6 @@ h1, h2, p, a {
 
 .footer .stroke {
   position: absolute;
-  top: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
