--- a/style.scss
+++ b/style.scss
@@ -72,23 +72,38 @@ h1,h2,p,a {margin:0;}
     .link:last-child {
         margin-right: 0;
     }
-    .intro {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: 795px;
-    }
+    
 }
-.block-1 {
+.intro {
+    height: 91.5vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(19, 19, 19, 1);
+  }
+  .unknwn {
+    position: absolute;
+    font-size: 16.6vw;
+    color: transparent;
+    -webkit-text-stroke: 2px rgba(52, 52, 52, 1); 
+  }
+  .n-chance {
+      position: absolute;
+    font-size: 3.3vw;
+    color: rgba(255, 255, 255, 1);
+  }
+
+  .block-1 {
     display: flex;
     justify-content: center;
+    align-self: flex-start;
     width: 100%;
     height: 50%;
     border-bottom: 1px solid rgba(77, 77, 77, 1);
 }
 .line-1-2 {
-    width: 719px;
+    width: 38%;
     border-left: 1px solid rgba(77, 77, 77, 1);
     border-right: 1px solid rgba(77, 77, 77, 1);
 }
@@ -100,28 +115,17 @@ h1,h2,p,a {margin:0;}
 .block-2 {
     display: flex;
     justify-content: center;
+    align-self: flex-end;
     width: 100%;
     height: 50%;
 }
-.unknwn {
-    position: absolute;
-    top: 19%;
-    font-size: 319px;
-    line-height: 414.7px;
-    color: transparent;
-    -webkit-text-stroke: 2px rgba(52, 52, 52, 1); 
-}
+
+
+
 .unk {
     color: transparent;
     -webkit-text-stroke: 1px rgba(255, 255, 255, 0.7); 
 }
-.n-chance {
-    position: absolute;
-    top: 44%;
-    font-size: 64px;
-    color: rgba(255, 255, 255, 1);
-}
-
 /* ABOUT-US */
 
 .about-us {
@@ -335,20 +339,19 @@ h1,h2,p,a {margin:0;}
     background: $background-color;
     
     .end {
-        position: relative;
         display: flex;
+        align-items: center;
         justify-content: center;
         padding: 148px 0px 148px 0px;
     }
     .unknwn-end {
-        font-size: 319px;
+        font-size: 16.6vw;
         line-height: 414.7px;
         color: transparent;
         -webkit-text-stroke: 1px rgba(52, 52, 52, 1); 
     }
     .stroke {
         position: absolute;
-        top: 50%;
         display: flex;
         width: 150%;
         animation: 80s stroke infinite linear;
