--- a/style.css
+++ b/style.css
@@ -575,42 +575,97 @@ h1, h2, p, a {
   .user-profile {
     min-width: 310px !important;
   }
+  .user-profile:nth-child(1) {
+    border-bottom: 1px solid #dedede;
+  }
+  .user-profile:nth-child(2) {
+    border-bottom: 1px solid #dedede;
+  }
+  .user-profile:nth-child(3) {
+    border-bottom: 1px solid #dedede;
+  }
 }
 
 @media (max-width: 860px) {
+  .intro {
+    height: 60vh;
+  }
+  .top-container {
+    border-top: 0px;
+    border-bottom: 0px;
+  }
+  .w-container {
+    border-top: 0px;
+    border-bottom: 0px;
+  }
   .container {
     width: calc(100% - 40px);
     padding: 0 20px;
   }
+  .about-us-text {
+    font-size: 30px !important;
+    line-height: normal !important;
+  }
+  .team-text {
+    font-size: 30px !important;
+    line-height: normal !important;
+  }
   .row {
-    margin: 0 0px 0px -50px !important;
+    margin: 0 0px 0px -30px !important;
   }
   .item {
     width: 100% !important;
+    padding-left: 30px !important;
   }
   .maintext-project {
     font-size: 35px !important;
     line-height: normal !important;
 }
   .user-profile:nth-child(1) {
-    border-bottom: 1px solid #dedede;;
+    border-top: 1px solid #dedede;
+    border-bottom: 1px solid #dedede;
   }
   .user-profile:nth-child(2) {
     border-left: 1px solid #dedede !important;
     border-right: 1px solid #dedede !important;
-    border-bottom: 1px solid #dedede;;
+    border-bottom: 1px solid #dedede;
   }
   .user-profile:nth-child(3) {
-    border-bottom: 1px solid #dedede;;
+    border-bottom: 1px solid #dedede;
   }
   .user-profile:nth-child(4) {
     border-left: 1px solid #dedede !important;
+    border-bottom: 1px solid #dedede;
   }
   .item:nth-child(1) {
+    border-top: 1px solid #4d4d4d;
+    border-bottom: 1px solid #4d4d4d;
+  }
+  .item:nth-child(2) {
+    border-left: 1px solid #4d4d4d !important;
+    border-bottom: 1px solid #4d4d4d;
+  }
+  .item:nth-child(4) {
+    border-left: 1px solid #4d4d4d !important;
     border-bottom: 1px solid #4d4d4d;
   }
   .about-us-text {
     width: 100% !important;
+  }
+  .end-menu:nth-child(1) {
+    display: none !important;
+  }
+  .input-em {
+    font-size: 13px !important;
+  }
+  .input-text {
+    font-size: 13px !important;
+  }
+  .end-menu {
+    flex-wrap: wrap;
+  }
+  .f {
+    padding-top: 10px !important;
   }
   .left-side {
     width: 100% !important;
