--- a/style.css
+++ b/style.css
@@ -591,7 +591,8 @@ h1, h2, p, a {
 
 @media (max-width: 860px) {
   #menu {
-    display: block !important;
+    display: flex !important;
+    flex-direction: column;
   }
   .mobile-menu {
     font-size: 30px;
@@ -613,8 +614,11 @@ h1, h2, p, a {
   background-color: #131313;
   width: 100%;
   height: 100vh;
+  transition: all .5s;
 }
 .btn-menu {
+  display: flex;
+  justify-content: flex-end;
   background-color: #131313;
   border: #131313;
 }
