--- a/style.css
+++ b/style.css
@@ -616,10 +616,22 @@ h1, h2, p, a {
     display: flex;
     justify-content: flex-end;
   }
+  .nav-op {
+    justify-content: flex-end !important;
+    animation: opa 0.5s ease;
+  }
+  .nav-op .logo {
+    display: none;
+  }
   .nav-mob-menu {
     display: none;
     flex-direction: column;
     justify-content: center;
+    background-color: #131313;
+  }
+  @keyframes opa {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
   }
   .mob-link {
     font-size: 50px;
@@ -647,6 +659,7 @@ h1, h2, p, a {
     display: flex !important;
     height: 100vh;
     width: 100%;
+    animation: 0.5s ease;
   }
   .menu-nav {
     display: none !important;
